# alexa-viewer

./: .gitreview
app/: BodyTemplateDialog.qml  CMakeLists.txt  Main.qml  WeatherTemplateDialog.qml  afbclient.cpp  afbclient.h  alexa-viewer.qrc  main.cpp  shell-desktop.cpp  shell-desktop.h
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
